--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,16 +1,15 @@
 [tool.poetry]
 name = "resume-screening-backend"
 version = "0.1.0"
-description = "FastAPI backend for resume screening application"
+description = "Flask backend for resume screening application"
 authors = ["Your Name <your.email@example.com>"]
 readme = "README.md"
 packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
-fastapi = "^0.104.1"
-uvicorn = {extras = ["standard"], version = "^0.24.0"}
-python-multipart = "^0.0.6"
+flask = "^3.0.0"
+flask-cors = "^4.0.0"
 PyPDF2 = "^3.0.1"
 pdfplumber = "^0.10.3"
 requests = "^2.31.0"
