--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ flask-cors = "^4.0.0"
 PyPDF2 = "^3.0.1"
 pdfplumber = "^0.10.3"
 requests = "^2.31.0"
+openai = "^1.104.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
