--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,8 @@ pycparser==2.22 ; python_full_version >= "3.8.1" and python_full_version < "4.0.
 pypdf2==3.0.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 pypdfium2==4.30.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 requests==2.32.4 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+aiohttp>=3.8.0
+openai>=1.0.0
 typing-extensions==4.13.2 ; python_full_version >= "3.8.1" and python_version < "3.10"
 urllib3==2.2.3 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 werkzeug==3.0.6 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
